--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <img src="./img/logo_mvalley_vec.png" width="400"/>
             </div>
         </div>
-        <h1>Bienvenue à</h1><h1 class="">Mystery Valley</h1>
-        <p>Un monde clandestin où chaque décision compte. Êtes-vous prêt à entrer dans l'ombre ?</p>
+        <h1>Bienvenue à <span>Mystery Valley</span></h1>
+        <p>Un monde où chaque décision compte. Êtes-vous prêt à entrer dans l'ombre ?</p>
     
         <div class="fog-container">
             <div class="fog"></div>
