--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Sigmar&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Sigmar&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
             <a href="#">Règlement</a>
             <a href="#">Nous rejoindre</a>
             <a href="#">Nous soutenir</a>
-            <a href="#">Réseaux</a>
+            <a href="https://discord.gg/BehxEZDB" target="_blank"><img src="./img/Discord_Logo_sans_texte.svg.png" height="25"/></a>
         </div>
     </div>
     <section class="hero">
