--- a/index.html
+++ b/index.html
@@ -15,28 +15,29 @@
         <div class="logo">Mystery Valley</div>
         <div class="menu">
             <a href="#">Accueil</a>
-            <a href="#">Règlement</a>
             <a href="#">Nous rejoindre</a>
+            <a href="#">Règlement</a>
+
             <a href="#">Nous soutenir</a>
             <a href="https://discord.gg/BehxEZDB" target="_blank"><img src="./img/Discord_Logo_sans_texte.svg.png" height="25"/></a>
         </div>
     </div>
     <section class="hero">
-        <div class="box">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <div class="content">
-                <img src="./img/logo_mvalley_vec.png" width="400"/>
-            </div>
-        </div>
+        <figure>
+            <img src="./img/logo_mvalley_vec.png" width="400"/>
+        </figure>
         <h1>Bienvenue à <span>Mystery Valley</span></h1>
         <p>Un monde où chaque décision compte. Êtes-vous prêt à entrer dans l'ombre ?</p>
     
         <div class="fog-container">
             <div class="fog"></div>
         </div>
+    </section>
+    <section class="socialnetwork">
+
+    </section>
+    <section class="team">
+        <h2>L'équipe de MYSTERY VALLEY</h2>
     </section>
 </body>
 </html>
