--- a/reglement.html
+++ b/reglement.html
@@ -17,6 +17,7 @@
             <a href="/">Accueil</a>
             <a href="#">Nous rejoindre</a>
             <a href="/reglement.html">Règlement</a>
+            <a href="/codepenal.html">Code pénal</a>
 
             <a href="#">Nous soutenir</a>
             <a href="https://discord.gg/BehxEZDB" target="_blank"><img src="./img/Discord_Logo_sans_texte.svg.png" height="25"/></a>
