--- a/codepenal.html
+++ b/codepenal.html
@@ -27,7 +27,7 @@
 
     <section class="codepenal">
         <div class="capitole">
-            <img src="./img/Seal_of_the_United_States_Department_of_Justice.svg" />
+            <img src="./img/logo_lspd_discord.png" />
         </div>
         <div class="tab">
             <h3>Code Pénal du Serveur GTA RP - Base US</h3>
