--- a/reglement.html
+++ b/reglement.html
@@ -16,11 +16,11 @@
         <div class="logo">Mystery Valley</div>
         <div class="menu">
             <a href="/">Accueil</a>
-            <a href="#">Nous rejoindre</a>
+            <a href="/join.html">Nous rejoindre</a>
             <a href="/reglement.html">Règlement</a>
             <a href="/codepenal.html">Code pénal</a>
 
-            <a href="#">Nous soutenir</a>
+            <a href="https://paypal.me/mysteryvalleyFR?country.x=FR&locale.x=fr_FR" target="_blank">Nous soutenir</a>
             <a href="https://discord.gg/BehxEZDB" id="discordServer" target="_blank"><img src="./img/Discord_Logo_sans_texte.svg.png" height="30" width="30"/></a>
         </div>
     </div>
