--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mystery Valley</title>
+    <link rel="icon" type="image/x-icon" href="/img/logo_mvalley_vec.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"></head>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Sigmar&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Sigmar&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chewy&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Sigmar&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-</head>
+
 <body>
     <div class="header">
         <div class="logo">Mystery Valley</div>
@@ -48,7 +53,7 @@
             <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
                 <div class="flex flex-col items-center pb-10" style="padding-top: 30px">
                     <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/Guizmod.png" alt="Bonnie image"/>
-                    <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">Guizmod</h5>
+                    <h5 class="h5-card">Guizmod</h5>
                     <span class="text-sm text-gray-500 dark:text-gray-400">Fondateur</span>
                     <div class="pubTeam">
                         <div class="discordTeam">
@@ -63,7 +68,7 @@
             <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
                 <div class="flex flex-col items-center pb-10" style="padding-top: 30px">
                     <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/diego.png" alt="Bonnie image"/>
-                    <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">Diegohbsss</h5>
+                    <h5 class="h5-card">Diegohbsss</h5>
                     <span class="text-sm text-gray-500 dark:text-gray-400">Fondateur</span>
                     <div class="pubTeam">
                         <div class="discordTeam">
@@ -76,11 +81,24 @@
                 </div>
             </div>
         </div>
-
-        
-
     </section>
-
+    <div class="footer-basic">
+        <footer>
+            <div class="social">
+                <a href="#"><i class="icon ion-social-instagram"></i></a>
+                <a href="#"><i class="icon ion-social-twitter"></i></a>
+                <a href="#"><i class="icon ion-social-facebook"></i></a>
+            </div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="/">Accueil</a></li>
+                <li class="list-inline-item"><a href="/join.html">Nous rejoindre</a></li>
+                <li class="list-inline-item"><a href="/reglement.html">Règlement</a></li>
+                <li class="list-inline-item"><a href="/codepenal.html">Code pénal</a></li>
+                <li class="list-inline-item"><a href="https://paypal.me/mysteryvalleyFR?country.x=FR&locale.x=fr_FR" target="_blank">Nous soutenir</a></li>
+            </ul>
+            <p class="copyright">Site conçu par <a href="mailto:jordan.chariot@gmail.com">CHARIOT Jordan</a> - 2025</p>
+        </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
 </html>
