Correction titre join

--- a/join.html
+++ b/join.html
@@ -34,7 +34,7 @@
     
     <div class="container-join">
         <div class="introduction-join">
-            <h2>Comment nous rejoindre ?</h2>
+            <h2>Comment rejoindre Mystery Valley ?</h2>
             <div class="introduction">
                 <cite>Mystery Valley attire souvent toutes les convoitises. Cette ville est sous l'influence d'une WhiteList pour y accéder.<br />
                     Avant de rejoindre Mystery Valley, nous voulons nous assurer que tout est en ordre pour vous accueillir. <br/>
