Gestion de hamburger

--- a/join.html
+++ b/join.html
@@ -30,6 +30,19 @@
             <a href="https://paypal.me/mysteryvalleyFR?country.x=FR&locale.x=fr_FR" target="_blank">Nous soutenir</a>
             <a href="https://discord.gg/BehxEZDB" id="discordServer" target="_blank"><img src="./img/Discord_Logo_sans_texte.svg.png" height="30" width="30"/></a>
         </div>
+        <div class="hamburger" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+    <div class="mobile-menu" id="mobileMenu">
+        <a href="/">Accueil</a>
+        <a href="/join.html">Nous rejoindre</a>
+        <a href="/reglement.html">Règlement</a>
+        <a href="/codepenal.html">Code pénal</a>
+        <a href="https://paypal.me/mysteryvalleyFR?country.x=FR&locale.x=fr_FR" target="_blank">Nous soutenir</a>
+        <a href="https://discord.gg/BehxEZDB" id="discordServer" target="_blank">Discord</a>
     </div>
     
     <div class="container-join">
