Ajout des metadonnées

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mystery Valley - Serveur de jeu GTA RP offrant une expérience immersive et unique. Rejoignez-nous dès maintenant !">
+    <meta name="keywords" content="Mystery Valley, GTA RP, serveur GTA, roleplay, jeu en ligne, communauté RP">
+    <meta name="author" content="Mystery Valley Team">
+    <meta property="og:title" content="Mystery Valley - Serveur GTA RP">
+    <meta property="og:description" content="Rejoignez Mystery Valley, un serveur GTA RP unique en son genre, et vivez une aventure immersive !">
+    <meta property="og:image" content="https://mysteryvalley.fr/img/logo.png">
+    <meta property="og:url" content="https://mysteryvalley.fr">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Mystery Valley - Serveur GTA RP">
+    <meta name="twitter:description" content="Découvrez notre serveur GTA RP Mystery Valley et plongez dans un monde immersif !">
+    <meta name="twitter:image" content="https://mysteryvalley.fr/img/logo.png">
     <title>Mystery Valley</title>
     <link rel="icon" type="image/x-icon" href="/img/logo_mvalley_vec.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
