--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"></head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/footer.css">
     
@@ -27,10 +27,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Sigmar&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Sigmar&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Chewy&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Sigmar&family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
+</head>
 <body>
     <div class="header">
         <div class="logo">Mystery Valley</div>
+        <a href="https://top-serveurs.net/gta/mystery-valley" target="_blank" rel="noopener noreferrer" class="support-button">Soutenir gratuitement</a>
         <div class="menu">
             <a href="/">Accueil</a>
             <a href="/join.html">Nous rejoindre</a>
@@ -56,7 +57,7 @@
     </div>
     <section class="hero">
         <figure>
-            <img src="./img/logo_mvalley_vec.png" width="400"/>
+            <img src="./img/logo_mvalley_vec.png" loading="lazy" width="400"/>
         </figure>
         <h1>Bienvenue à <span>Mystery Valley</span></h1>
         <p>Un monde où chaque décision compte. Êtes-vous prêt à entrer dans l'ombre ?</p>
@@ -72,34 +73,34 @@
     </section>
     
     <section class="team">
-        <h2>L'équipe de MYSTERY VALLEY</h2>
+        <h1>L'équipe de MYSTERY VALLEY</h1>
         <div class="team_container">
             <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
                 <div class="flex flex-col items-center pb-10" style="padding-top: 30px">
-                    <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/Guizmod.png" alt="Bonnie image"/>
+                    <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/Guizmod.png" loading="lazy" alt="Guizmod image"/>
                     <h5 class="h5-card">Guizmod</h5>
                     <span class="text-sm text-gray-500 dark:text-gray-400">Fondateur</span>
                     <div class="pubTeam">
                         <div class="discordTeam">
-                            <img src="./img/Discord_Logo_sans_texte.svg.png" width="30" height="30" /> <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">Guizmod</h5>
+                            <img src="./img/Discord_Logo_sans_texte.svg.png" loading="lazy" width="30" height="30" /> <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">Guizmod</h5>
                         </div>
                         <div class="twitchTeam">
-                           <img src="./img/twitch.webp" width="30" height="30" /><a href="https://www.twitch.tv/guizmodlive" target="_blank"><h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">GuizModLive</h5></a>  
+                           <img src="./img/twitch.webp" width="30" height="30" loading="lazy" /><a href="https://www.twitch.tv/guizmodlive" target="_blank"><h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">GuizModLive</h5></a>  
                         </div>   
                     </div>                
                 </div>
             </div>
             <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
                 <div class="flex flex-col items-center pb-10" style="padding-top: 30px">
-                    <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/diego.png" alt="Bonnie image"/>
+                    <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/diego.png" loading="lazy" alt="Bonnie image"/>
                     <h5 class="h5-card">Diegohbsss</h5>
                     <span class="text-sm text-gray-500 dark:text-gray-400">Fondateur</span>
                     <div class="pubTeam">
                         <div class="discordTeam">
-                            <img src="./img/Discord_Logo_sans_texte.svg.png" width="30" height="30" /> <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">azu718</h5>
+                            <img src="./img/Discord_Logo_sans_texte.svg.png" width="30" height="30" loading="lazy" /> <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">azu718</h5>
                         </div>
                         <div class="twitchTeam">
-                           <img src="./img/twitch.webp" width="30" height="30" /><a href="https://www.twitch.tv/diegohbsss" target="_blank"><h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">Diegohbsss</h5></a>  
+                           <img src="./img/twitch.webp" width="30" height="30" loading="lazy" /><a href="https://www.twitch.tv/diegohbsss" target="_blank"><h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">Diegohbsss</h5></a>  
                         </div>   
                     </div>                
                 </div>
