--- a/join.html
+++ b/join.html
@@ -32,6 +32,7 @@
 <body>
     <div class="header">
         <div class="logo">Mystery Valley</div>
+        <a href="https://top-serveurs.net/gta/mystery-valley" target="_blank" rel="noopener noreferrer" class="support-button">Soutenir gratuitement</a>
         <div class="menu">
             <a href="/">Accueil</a>
             <a href="#">Nous rejoindre</a>
