--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </section>
     
     <section class="team">
-        <h1>L'équipe de MYSTERY VALLEY</h1>
+        <h2>L'équipe de MYSTERY VALLEY</h2>
         <div class="team_container">
             <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
                 <div class="flex flex-col items-center pb-10" style="padding-top: 30px">
@@ -92,15 +92,30 @@
             </div>
             <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
                 <div class="flex flex-col items-center pb-10" style="padding-top: 30px">
-                    <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/diego.png" loading="lazy" alt="Bonnie image"/>
+                    <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/diego.png" loading="lazy" alt="Diego image"/>
                     <h5 class="h5-card">Diegohbsss</h5>
-                    <span class="text-sm text-gray-500 dark:text-gray-400">Fondateur</span>
+                    <span class="text-sm text-gray-500 dark:text-gray-400">Fondateur / Développeur</span>
                     <div class="pubTeam">
                         <div class="discordTeam">
                             <img src="./img/Discord_Logo_sans_texte.svg.png" width="30" height="30" loading="lazy" /> <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">azu718</h5>
                         </div>
                         <div class="twitchTeam">
                            <img src="./img/twitch.webp" width="30" height="30" loading="lazy" /><a href="https://www.twitch.tv/diegohbsss" target="_blank"><h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">Diegohbsss</h5></a>  
+                        </div>   
+                    </div>                
+                </div>
+            </div>
+            <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+                <div class="flex flex-col items-center pb-10" style="padding-top: 30px">
+                    <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/Huguette.png" loading="lazy" alt="Huguette Logo"/>
+                    <h5 class="h5-card">Huguette</h5>
+                    <span class="text-sm text-gray-500 dark:text-gray-400">Co-Fondateur</span>
+                    <div class="pubTeam">
+                        <div class="discordTeam">
+                            <img src="./img/Discord_Logo_sans_texte.svg.png" width="30" height="30" loading="lazy" /> <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">_apale_</h5>
+                        </div>
+                        <div class="twitchTeam">
+                           <img src="./img/twitch.webp" width="30" height="30" loading="lazy" /><a href="https://www.twitch.tv/apale_" target="_blank"><h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">Apale_</h5></a>  
                         </div>   
                     </div>                
                 </div>
