--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section class="team">
         <h2>L'équipe de MYSTERY VALLEY</h2>
         <div class="team_container">
-            <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+            <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 item-team">
                 <div class="flex flex-col items-center pb-10" style="padding-top: 30px">
                     <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/Guizmod.png" loading="lazy" alt="Guizmod image"/>
                     <h5 class="h5-card">Guizmod</h5>
@@ -90,7 +90,7 @@
                     </div>                
                 </div>
             </div>
-            <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+            <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 item-team">
                 <div class="flex flex-col items-center pb-10" style="padding-top: 30px">
                     <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/diego.png" loading="lazy" alt="Diego image"/>
                     <h5 class="h5-card">Diegohbsss</h5>
@@ -105,7 +105,7 @@
                     </div>                
                 </div>
             </div>
-            <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+            <div class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 item-team">
                 <div class="flex flex-col items-center pb-10" style="padding-top: 30px">
                     <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="./img/team/Huguette.png" loading="lazy" alt="Huguette Logo"/>
                     <h5 class="h5-card">Huguette</h5>
