Ajout des infos du serveur

--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
             Your browser does not support the video tag.
           </video>
     </section>
+
+    <section class="infos">
+        <div class="background-infos" in-viewport>
+            <h2>L'histoire de Mystery Valley</h2>
+            <cite>Une ville où le mystère règne en maître. Osez franchir le pas et plongez dans une aventure unique. Chaque ruelle cache un secret, chaque choix façonne votre destinée. Seuls les plus audacieux perceront ses mystères… 🌙🔎</cite>
+            <div class="info_container">
+                
+            </div>
+        </div>
+    </section>
     
     <section class="team">
         <h2>L'équipe de MYSTERY VALLEY</h2>
