Correction du lien discord + vote et gitignore les videos car trop lourde

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <div class="header">
         <div class="logo">Mystery Valley</div>
-        <a href="https://top-serveurs.net/gta/mystery-valley" target="_blank" rel="noopener noreferrer" class="support-button">Votez pour Mystery Valley</a>
+        <a href="https://top-serveurs.net/gta/mystery-valley-rp" target="_blank" rel="noopener noreferrer" class="support-button">Votez pour Mystery Valley</a>
         <div class="menu">
             <a href="/">Accueil</a>
             <a href="/join.html">Nous rejoindre</a>
@@ -39,7 +39,7 @@
             <a href="/codepenal.html">Code pénal</a>
 
             <a href="https://paypal.me/mysteryvalleyFR?country.x=FR&locale.x=fr_FR" target="_blank">Nous soutenir</a>
-            <a href="https://discord.gg/BehxEZDB" id="discordServer" target="_blank"><img src="./img/Discord_Logo_sans_texte.svg.png" height="30" width="30"/></a>
+            <a href="https://discord.gg/mysteryvalley" id="discordServer" target="_blank"><img src="./img/Discord_Logo_sans_texte.svg.png" height="30" width="30"/></a>
         </div>
         <div class="hamburger" onclick="toggleMenu()">
             <div></div>
@@ -53,7 +53,7 @@
         <a href="/reglement.html">Règlement</a>
         <a href="/codepenal.html">Code pénal</a>
         <a href="https://paypal.me/mysteryvalleyFR?country.x=FR&locale.x=fr_FR" target="_blank">Nous soutenir</a>
-        <a href="https://discord.gg/BehxEZDB" id="discordServer" target="_blank">Discord</a>
+        <a href="https://discord.gg/mysteryvalley" id="discordServer" target="_blank">Discord</a>
     </div>
     <section class="hero">
         <figure>
