--- a/join.html
+++ b/join.html
@@ -32,7 +32,7 @@
 <body>
     <div class="header">
         <div class="logo">Mystery Valley</div>
-        <a href="https://top-serveurs.net/gta/mystery-valley" target="_blank" rel="noopener noreferrer" class="support-button">Votez pour Mystery Valley</a>
+        <a href="https://top-serveurs.net/gta/mystery-valley-rp" target="_blank" rel="noopener noreferrer" class="support-button">Votez pour Mystery Valley</a>
         <div class="menu">
             <a href="/">Accueil</a>
             <a href="#">Nous rejoindre</a>
@@ -40,7 +40,7 @@
             <a href="/codepenal.html">Code pénal</a>
 
             <a href="https://paypal.me/mysteryvalleyFR?country.x=FR&locale.x=fr_FR" target="_blank">Nous soutenir</a>
-            <a href="https://discord.gg/BehxEZDB" id="discordServer" target="_blank"><img src="./img/Discord_Logo_sans_texte.svg.png" height="30" width="30"/></a>
+            <a href="https://discord.gg/mysteryvalley" id="discordServer" target="_blank"><img src="./img/Discord_Logo_sans_texte.svg.png" height="30" width="30"/></a>
         </div>
         <div class="hamburger" onclick="toggleMenu()">
             <div></div>
@@ -54,7 +54,7 @@
         <a href="/reglement.html">Règlement</a>
         <a href="/codepenal.html">Code pénal</a>
         <a href="https://paypal.me/mysteryvalleyFR?country.x=FR&locale.x=fr_FR" target="_blank">Nous soutenir</a>
-        <a href="https://discord.gg/BehxEZDB" id="discordServer" target="_blank">Discord</a>
+        <a href="https://discord.gg/mysteryvalley" id="discordServer" target="_blank">Discord</a>
     </div>
     
     <div class="container-join">
@@ -69,7 +69,7 @@
         </div>
         <div class="content-join">            
             <ol class="relative border-s border-gray-200 dark:border-gray-700">      
-                <a href="https://discord.gg/BehxEZDB" target="_blank">           
+                <a href="https://discord.gg/mysteryvalley" target="_blank">           
                 <li class="mb-10 ms-4">
                     <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
                     <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Première étape</time>
