--- a/reglement.html
+++ b/reglement.html
@@ -200,7 +200,7 @@
                         strictement interdites et sanctionnées d’un ban permanent.</p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">● La base militaire est une zone interdite.
                         </p>
-                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">● ● Les petites insultes sont tolérées mais n’en abusez pas ! Le respect est
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">● Les petites insultes sont tolérées mais n’en abusez pas ! Le respect est
                         primordial !                        
                         </p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">● N’oubliez pas que derrière chaque personnage se cache un joueur. Les tirs
