--- a/reglement.html
+++ b/reglement.html
@@ -237,7 +237,7 @@
                         certains lieux d'intérêt. Exemple : hôpital, commissariat, gouvernement…                        
                         </p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">● Pour avoir un mapping sur le serveur, il faut attendre minimum 1 à 2
-                        semaines actives ( Il faudra ensuite transmettre un dossier au sta )
+                        semaines actives (Il faudra ensuite transmettre un dossier au staff)
                         </p>
                 </div>
                 <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="RP" role="tabpanel" aria-labelledby="RP-tab">
@@ -330,7 +330,7 @@
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Entreprise</strong></p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">● Un seul patron par entreprise. Une scène de recrutement avec le responsable
                         est obligatoire avant d’être considéré comme employé. <br/>
-                        ● Le patron est tenu d’être actif, si ce n'est pas le cas le sta est en droit de
+                        ● Le patron est tenu d’être actif, si ce n'est pas le cas le staff est en droit de
                         nommer quelqu'un qui proposera une reprise d'activité.<br/>
                         ● Il est possible de passer des contrats entre diérentes entreprise</p>
                 </div>
