Correction faute orthographe

--- a/codepenal.html
+++ b/codepenal.html
@@ -89,7 +89,7 @@
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">Disposition 6 : Les droits Miranda sont un droit de citoyens. Aucun citoyen ne doit être en cellule sans avoir pu jouir de ses droits. Un oubli de ceux-ci dirige directement l'acte au vice de procédure.</p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">Disposition 7 : Toute personne dans l'incapacité de payer ses amendes peut faire l'objet d'une saisie de ses biens.</p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Droits MIRANDA</strong></p>
-                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">Monsieur/Madame, nous somme le (date+heure)<br/>
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">Monsieur/Madame, nous sommes le (date+heure)<br/>
                                                                                   Vous êtes en état d'arrestation. 
                                                                                   Vous avez le droit de garder le silence. Tout ce que vous direz pourra et sera retenu contre vous lors d'une cours de justice.<br/>
                                                                                   Vous avez le droit à un avocat et d'avoir un avocat présent lors de votre intérrogatoire. <br/>
