Correction code penal

--- a/codepenal.html
+++ b/codepenal.html
@@ -151,7 +151,7 @@
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">Article 26.4.1 : La possession de 11g à 20g - Amende 2200$ à 2700$.</p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">Article 26.5 : La possession de 1 g à 10 g de cocaïne est passible d’une amende de 1 500 $ à 2 000 $.</p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">Article 26.5.1 : La possession de 11g à 20g - Amende 2200$ à 2700$.</p>
-                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">Article 27 : Toutes personnes refusant de se soumettre à un contrôle de police</p>
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">Article 27 : Toutes personnes refusant de se soumettre à un contrôle de police peut faire l'objet d'une arrestation - Amende 200$</p>
                     
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-600 dark:text-white">Crimes :</strong></p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">Article 28.1 : Braquage de supérette - Cellule 10 minute + Amende de 1500$  </p>
