--- a/codepenal.html
+++ b/codepenal.html
@@ -34,7 +34,7 @@
 <body>
     <div class="header">
         <div class="logo">Mystery Valley</div>
-        <a href="https://top-serveurs.net/gta/mystery-valley-rp" target="_blank" rel="noopener noreferrer" class="support-button">Votez pour Mystery Valley</a>
+        <!-- <a href="https://top-serveurs.net/gta/mystery-valley-rp" target="_blank" rel="noopener noreferrer" class="support-button">Votez pour Mystery Valley</a> -->
         <div class="menu">
             <a href="/">Accueil</a>
             <a href="/join.html">Nous rejoindre</a>
