Ajout interdiction illégal EMS

--- a/reglement.html
+++ b/reglement.html
@@ -385,7 +385,10 @@
                 </div>
                 <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="ems" role="tabpanel" aria-labelledby="ems-tab">
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">EMS</strong></p>
-                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">● Vous devez respecter les arrêts de travail ordonnés par les médecins après
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">
+                    ● Les EMS ne peuvent pas faire de l'illégal.
+                    <br />    
+                    ● Vous devez respecter les arrêts de travail ordonnés par les médecins après
                     vous être fait soigner.<br />
                     ● Lors d’une intervention EMS, essayez de les aider au maximum en précisant
                     le type des blessures.<br />
@@ -403,7 +406,8 @@
                     qu'il n'y ai personne a l'arrivée des E.M.S soyez sûr de rester à cet endroit
                     avant de lancer l'appel.<br />
                     ● Ne pas faire d'appels E.M.S tant qu'un gunfight n'est pas terminé ou que la
-                    scène soit finie complètement avant de faire l'appel.</p>
+                    scène soit finie complètement avant de faire l'appel.
+                    </p>
                 </div>
             </div>
         </div>
