ajout bennys zone safe

--- a/reglement.html
+++ b/reglement.html
@@ -241,7 +241,7 @@
                         </p>
                 </div>
                 <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="RP" role="tabpanel" aria-labelledby="RP-tab">
-                    <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Les zones safe sont : </strong> Le poste de police, l'hôpital et l'aéroport</p>
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Les zones safe sont : </strong> Le poste de police, l'hôpital, le Benny's et l'aéroport</p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">Dans ces lieux, il est interdit de faire ces actions : 
                         <br />- Kidnapping
                         <br />- Braquer une personne
