Ajout categorie vol de voiture

--- a/reglement.html
+++ b/reglement.html
@@ -108,6 +108,9 @@
                     <li class="me-2" role="presentation">
                         <button class="inline-block p-4 border-b-2 rounded-t-lg text-white hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="ems-tab" data-tabs-target="#ems" type="button" role="tab" aria-controls="ems" aria-selected="false">EMS</button>
                     </li>
+                    <li class="me-2" role="presentation">
+                        <button class="inline-block p-4 border-b-2 rounded-t-lg text-white hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="volvoiture-tab" data-tabs-target="#volvoiture" type="button" role="tab" aria-controls="volvoiture" aria-selected="false">Vol de voiture</button>
+                    </li>
                 </ul>
             </div>
             <div id="default-tab-content">
@@ -332,7 +335,7 @@
                         est obligatoire avant d’être considéré comme employé. <br/>
                         ● Le patron est tenu d’être actif, si ce n'est pas le cas le staff est en droit de
                         nommer quelqu'un qui proposera une reprise d'activité.<br/>
-                        ● Il est possible de passer des contrats entre diérentes entreprise</p>
+                        ● Il est possible de passer des contrats entre différentes entreprise</p>
                 </div>
                 <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="lspd" role="tabpanel" aria-labelledby="lspd-tab">
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">LSPD</strong></p>
@@ -407,6 +410,29 @@
                     avant de lancer l'appel.<br />
                     ● Ne pas faire d'appels E.M.S tant qu'un gunfight n'est pas terminé ou que la
                     scène soit finie complètement avant de faire l'appel.
+                    </p>
+                </div>
+                <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="volvoiture" role="tabpanel" aria-labelledby="volvoiture-tab">
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Vol de voiture</strong></p>
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">
+                   ⛔ Interdiction de voler un véhicule uniquement pour :
+                    <br /> 
+                    ● Fouiller les coffres
+                    <br /> 
+                    ● Le vendre rapidement
+                    <br /> 
+                    ● Pour le plaisir de voler
+                    <br /><br />     
+                    ✅ Le vol de véhicule n’est autorisé que dans le cadre de scènes RP cohérentes, comme par exemple :
+                    <br /> 
+                    ● Un braquage
+                    <br />         
+                    ● Un gofast
+                    <br /> <br />     
+                    
+                    Une scène construite et logique avec une véritable intention RP.
+                    <br /> 
+                    Tout abus ou non-respect de cette règle pourra entraîner des sanctions.
                     </p>
                 </div>
             </div>
