Ajout reglement LSPD

--- a/reglement.html
+++ b/reglement.html
@@ -384,7 +384,9 @@
                         defcon annoncé).<br />
                         ● Lorsque vous êtes amenés à fouiller un individu vous ne devez pas tenir
                         compte de l’argent marqué dit argent “sale” vous devez prendre en compte
-                        que la personne détient cet argent.</p>
+                        que la personne détient cet argent.<br />
+                        ● Suite à une démission ou un licenciement du LSPD, l’ex-agent est tenu de respecter une période de cohérence RP durant laquelle toute activité illégale est interdite pendant une semaine.
+                        </p>
                 </div>
                 <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="ems" role="tabpanel" aria-labelledby="ems-tab">
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">EMS</strong></p>
