--- a/reglement.html
+++ b/reglement.html
@@ -182,6 +182,7 @@
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Citoyen : </strong>Joueur</p>
                 </div>
                 <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="HRP" role="tabpanel" aria-labelledby="HRP-tab">
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Informations :</strong></p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">● Les Prénom et Nom RP doivent obligatoirement être mis sur Steam ou fiveM
                         ainsi que Discord pour une recherche plus facile. Vous vous exposez à un
                         kick, warn voir ban si ils ne sont pas mis.
@@ -241,7 +242,25 @@
                         </p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">● Pour avoir un mapping sur le serveur, il faut attendre minimum 1 à 2
                         semaines actives (Il faudra ensuite transmettre un dossier au staff)
-                        </p>
+                    </p>
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Streaming  :</strong></p>
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">
+                        <p class="text-left text-sm text-gray-500 dark:text-gray-400">● Il est demandé à chaque streamer de venir s'identifier auprès du staff avant de streamer et d’obtenir l’accord de celui-ci. </p>
+
+                        <p class="text-left text-sm text-gray-500 dark:text-gray-400">● Cacher sa mini map.</p>
+
+                        <p class="text-left text-sm text-gray-500 dark:text-gray-400">● Toute information issue d'un stream est considérée comme du Méta Gaming et aboutira sur un ban.</p>
+
+                        <p class="text-left text-sm text-gray-500 dark:text-gray-400">● Merci de respecter les autres et de couper le son de votre stream lorsque vous êtes en “besoin d’aide” sur le discord.</p>
+                    </p>
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Le staff  :</strong></p>
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">
+                        Merci de ne pas abuser du temps du staff et de vous assurer de bien contacter la bonne personne pour votre demande ou votre problème.
+                        Il est interdit de MP ou de taguer un dév ou les admins sans y avoir été invité. Merci de votre compréhension.<br />
+
+                        Il est interdit de mentir à un staff sur le déroulement d’une scène.<br /><br />
+                        Spammer les membres du staff, par tickets, par Messages Privés ou en taguant ceux-ci est interdit. Prenez également en compte qu'ils peuvent tout à fait être occupés. Si vous n'avez aucune réponse, patientez un moment avant d'envoyer votre prochain message ou demandez à un autre membre de l'équipe disponible.
+                    </p>
                 </div>
                 <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="RP" role="tabpanel" aria-labelledby="RP-tab">
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Les zones safe sont : </strong> Le poste de police, l'hôpital, le Benny's et l'aéroport</p>
@@ -261,16 +280,34 @@
                         ● Lors d’un coma dû à coup de crosse, coup derrière la tête, coup de couteau, etc… Vous oubliez les quinze dernières minutes.<br />
                         ● Lors d’un coma dû à une arme à feu, vous oubliez la totalité de la scène.<br />
                         ● Le Fear RP et le Mass RP sont à prendre en compte en tout temps, tout manquement à ces règles sera lourdement sanctionné. (Je ne veux pas voir un joueur pointé par 10 gars et que celui-ci réponde je n’ai peur de rien etc…) <br />
-                        ● Il est interdit de fouiller et dépouiller un membre des EMS, de la LSPD, etc… en service.
+                        ● Il est interdit de fouiller et dépouiller un membre des EMS, de la LSPD, etc… en service.</p>
+                     <p class="text-left text-sm text-gray-500 dark:text-gray-400">
+                        ● Il est formellement interdit en cas de wipe de léguer ou de transmettre des possessions (argent, voitures, armes, immobilier, etc) à son reroll ou à un autre personnage. Outrepasser cette règle implique la suppression complète de l’ensemble des biens et richesses des personnages qui en bénéficient.
+                        <br />
+                        ● Ne plus se connecter quand on est la cible d'une enquête de la police, d'une procédure judiciaire ou d'un dossier de mort RP est passible de Warn.
+                        <br />
+                        ● Tout membre d'une faction légale (LSPD, EMS, etc.) doit respecter un délai d'une semaine après sa démission avant de pouvoir rejoindre une activité ou une organisation illégale. À l'inverse, un joueur impliqué dans une organisation illégale ne peut pas rejoindre une faction légale.    
+                    </p>  
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Mort RP </strong></p>
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400">Toute Mort RP se doit de passer par un dossier soumis au staff.<br />
+                        Ce dossier doit contenir :<br /><br />
+
+                        -Auteur<br />
+                        -Cible(s)<br />
+                        -Raison(s)<br />
+                        -Preuve(s)<br /><br />
+
+                        Si possible un record de la scène de mort RP pour éviter toute ambiguïté une fois la scène finie.<br />
+                    </p>
                 </div>
                 <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="illegale" role="tabpanel" aria-labelledby="illegale-tab">
-                    <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Illégale</strong></p>
+                    <p class="text-left text-sm text-gray-500 dark:text-gray-400"><strong class="font-medium text-gray-800 dark:text-white">Illégal</strong></p>
                     <p class="text-left text-sm text-gray-500 dark:text-gray-400"><u>Privilégiez le dialogue au lieu des fusillades.</u> <br/> <br />
                         ● Toute personne devra respecter un maximum les forces de l’ordre !!! Il est
                         important de s'arrêter si vous n’avez rien à vous reprocher.<br />
                         ● Il est strictement interdit de troll/forceRP les policiers. Merci de respecter le
                         fear police.<br />
-                        ● il est interdit de prendre les armes du LSPD même si ils sont Hors service
+                        ● il est interdit de prendre les armes du LSPD même si ils sont Hors service<br />
                         ● Vous ne devez pas prendre plus de 50% de l’inventaire que la personne a sur
                         lui !<br />
                         ● Vendre de la drogue à moto est strictement interdit. De plus, la vente de
@@ -326,7 +363,10 @@
                         ● L’île possède plus de 4 millions d’habitants, prenez en compte le Mass RP.<br />
                         ● Vous pouvez revendiquer un otage à partir du moment où l’otage est un
                         JOUEUR. La vie d’un otage est importante, vous ne pouvez pas le tuer sans
-                        raison valable<br />
+                        raison valable.<br />
+                        ● Les bâtiments du LSPD et des Shérifs, les hôpitaux, les prisons, l’aéroport, les ammunations et le bâtiment de l'hôtel de ville / tribunal, 
+                        sont considérés de part le RP de masse comme des safeplaces.<br />
+                        ● Il est formellement interdit de donner des informations sur le fonctionnement des circuits illégaux aux nouveaux arrivants, même lors d'une discussion HRP.
                         </p>
                 </div>
                 <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="entreprise" role="tabpanel" aria-labelledby="entreprise-tab">
